# Chameleon

./: .dockerignore  .gitignore  CHANGELOG.md  README.en.md  README.md  pyproject.toml
backend/chameleon-agentkit/: pyproject.toml
backend/chameleon-agentkit/src/chameleon/agentkit/: __init__.py  _decorator.py  _runtime.py  _spec.py
backend/chameleon-agents/examples/echo/: pyproject.toml
backend/chameleon-agents/examples/echo_native/: pyproject.toml
backend/chameleon-agents/examples/echo_native/tests/: test_smoke.py
backend/chameleon-agents/examples/echo_runnable/: pyproject.toml
backend/chameleon-agents/examples/echo_runnable/tests/: test_smoke.py
backend/chameleon-agents/examples/rag_qa/: pyproject.toml
backend/chameleon-agents/examples/triage/: pyproject.toml
backend/chameleon-agents/qwen_chat/: pyproject.toml
backend/chameleon-agents/qwen_chat/tests/: test_smoke.py
backend/chameleon-api/: pyproject.toml
backend/chameleon-api/src/chameleon/api/: __init__.py
backend/chameleon-api/src/chameleon/api/agent/: __init__.py  api.py  schemas.py  service.py  stream.py
backend/chameleon-api/src/chameleon/api/conversation/: __init__.py  api.py  branching.py  schemas.py  service.py
backend/chameleon-api/tests/: test_chunkers.py  test_hit_test.py
backend/chameleon-app/: pyproject.toml
backend/chameleon-app/src/chameleon/app/: cli.py  main.py
backend/chameleon-app/tests/: test_global_handler.py  test_smoke.py  test_stream_serialize.py
backend/chameleon-core/: pyproject.toml
backend/chameleon-core/src/chameleon/core/: __init__.py
backend/chameleon-core/tests/: test_a2a.py  test_auth.py  test_components.py  test_crypto.py  test_db.py  test_embedding.py  test_embedding_image.py  test_failover.py  test_graph_agent_debate.py  test_graph_engine_events.py  test_graph_engine_ready_queue.py  test_graph_executor.py  test_graph_human_input.py  test_graph_llm_tool_calls.py  test_graph_nodes_control.py  test_graph_nodes_iteration.py  test_graph_nodes_llm_a2.py  test_graph_nodes_llm_kb.py  test_graph_nodes_parallel.py  test_graph_orchestrator.py  test_jwt.py  test_models.py  test_observe.py  test_passwords.py  test_plugin_manifest.py  test_plugin_sdk.py  test_plugin_signing.py  test_ragas_algorithms.py  test_redis.py  test_retrieval_expander.py  test_retrieval_hybrid.py  test_retrieval_pipeline.py  test_retrieval_reranker.py  test_retrieval_rerankers.py  test_retrieval_vlm.py  test_router.py  test_sandbox_docker.py  test_sandbox_runtime.py  test_schema.py  test_snowflake.py  (+4 more)
backend/chameleon-data/: pyproject.toml
backend/chameleon-data/src/chameleon/data/: __init__.py
backend/chameleon-engine/: pyproject.toml
backend/chameleon-engine/src/chameleon/engine/: __init__.py
backend/chameleon-engine/tests/: test_a2a.py  test_graph_agent_debate.py  test_graph_engine_events.py  test_graph_engine_ready_queue.py  test_graph_human_input.py  test_graph_llm_tool_calls.py  test_graph_nodes_control.py  test_graph_nodes_iteration.py  test_graph_nodes_llm_a2.py  test_graph_nodes_llm_kb.py  test_graph_nodes_parallel.py  test_graph_orchestrator.py  test_ragas_algorithms.py  test_retrieval_expander.py  test_retrieval_hybrid.py  test_retrieval_pipeline.py  test_retrieval_reranker.py  test_retrieval_rerankers.py  test_retrieval_vlm.py
backend/chameleon-integrations/: pyproject.toml
backend/chameleon-integrations/src/chameleon/integrations/: __init__.py  knowledge.py
backend/chameleon-integrations/tests/: conftest.py  test_components.py  test_observe_aspect.py  test_plugin_sandbox.py  test_plugin_signing.py  test_retriever_callback.py
backend/chameleon-providers/base/: pyproject.toml
backend/chameleon-providers/base/tests/: test_content_block.py  test_registry.py
backend/chameleon-providers/dify/: pyproject.toml
backend/chameleon-providers/dify/tests/: test_provider.py  test_smoke.py
backend/chameleon-providers/graph/: pyproject.toml
backend/chameleon-providers/local/: pyproject.toml
backend/chameleon-providers/local/tests/: conftest.py  test_provider.py
backend/chameleon-system/: pyproject.toml
backend/chameleon-system/src/chameleon/system/: __init__.py
chameleon-agents/echo/: pyproject.toml
chameleon-agents/echo/tests/: test_smoke.py
chameleon-agents/echo_native/: pyproject.toml
chameleon-agents/echo_native/tests/: test_smoke.py
chameleon-agents/echo_runnable/: pyproject.toml
chameleon-agents/echo_runnable/tests/: test_smoke.py
chameleon-agents/examples/echo_langgraph/: pyproject.toml
chameleon-agents/qwen_chat/: pyproject.toml
chameleon-agents/qwen_chat/tests/: test_smoke.py
chameleon-app/: pyproject.toml
chameleon-app/src/chameleon/app/: __init__.py  cli.py  main.py
chameleon-app/src/chameleon/app/modules/: __init__.py
chameleon-app/tests/: test_global_handler.py  test_stream_serialize.py
chameleon-core/: pyproject.toml
chameleon-core/src/chameleon/core/: auth.py  db.py  knowledge.py  logger.py  response.py
chameleon-core/src/chameleon/core/api/: exceptions.py
chameleon-core/src/chameleon/core/base/: __init__.py  agent_context.py  base_agent.py
chameleon-core/src/chameleon/core/components/: __init__.py  inventory.py  knowledge.py
chameleon-core/src/chameleon/core/config/: base_settings.py  env_settings.py  inventory.py  json_settings.py
chameleon-core/src/chameleon/core/embedding/: factory.py  openai_compat.py
chameleon-core/src/chameleon/core/function/: __init__.py
chameleon-core/src/chameleon/core/infra/: auth.py
chameleon-core/src/chameleon/core/models/: api_key.py  task.py
chameleon-core/src/chameleon/core/utils/: __init__.py  convert.py  crypto.py
chameleon-core/src/chameleon/core/vector/: factory.py  pgvector.py
chameleon-core/tests/: test_auth.py  test_components.py  test_db.py  test_embedding.py  test_models.py  test_response.py  test_smoke.py  test_vector.py
chameleon-providers/langgraph/: pyproject.toml
chameleon-providers/langgraph/tests/: test_provider.py  test_smoke.py
sdk/python/: README.md  pyproject.toml
sdk/python/chameleon_sdk/: __init__.py  client.py  decorators.py  tracer.py
(+1235 files in other folders)
