[project]
name = "chameleon-app"
version = "0.1.0"
description = "Chameleon FastAPI 入口 + 业务模块（agent/conversation/knowledge/api_key/task）"
requires-python = ">=3.12"
dependencies = [
    "chameleon-core",
    "chameleon-providers-base",
    "chameleon-provider-langgraph",
    "chameleon-provider-dify",
    "chameleon-provider-fastgpt",
    "chameleon-agent-echo",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "click>=8",
]

[tool.uv.sources]
chameleon-core = { workspace = true }
chameleon-providers-base = { workspace = true }
chameleon-provider-langgraph = { workspace = true }
chameleon-provider-dify = { workspace = true }
chameleon-provider-fastgpt = { workspace = true }
chameleon-agent-echo = { workspace = true }

[project.scripts]
chameleon = "chameleon.app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
