[project]
name = "chameleon-app"
version = "0.1.0"
description = "Chameleon FastAPI 入口 + 业务模块（agent/conversation/knowledge/api_key/task）"
requires-python = ">=3.12"
dependencies = [
    "chameleon-core",
    "chameleon-providers-base",
    "chameleon-provider-local",
    "chameleon-provider-dify",
    "chameleon-provider-fastgpt",
    # 内置 agent 通过 namespace 自动发现；这里仅显式依赖业务级 agent
    "chameleon-agent-qwen-chat",
    # 示例 agent 也安装到 workspace（namespace 扫到，但不强制 app 依赖）
    "chameleon-agent-example-echo-langgraph",
    "chameleon-agent-example-echo-runnable",
    "chameleon-agent-example-echo-native",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "click>=8",
]

[tool.uv.sources]
chameleon-core = { workspace = true }
chameleon-providers-base = { workspace = true }
chameleon-provider-local = { workspace = true }
chameleon-provider-dify = { workspace = true }
chameleon-provider-fastgpt = { workspace = true }
chameleon-agent-qwen-chat = { workspace = true }
chameleon-agent-example-echo-langgraph = { workspace = true }
chameleon-agent-example-echo-runnable = { workspace = true }
chameleon-agent-example-echo-native = { workspace = true }

[project.scripts]
chameleon = "chameleon.app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
