[project]
name = "chameleon-core"
version = "0.1.0"
description = "Chameleon 基础设施 + AI infra + 共享 ORM 模型"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "loguru>=0.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6",
    "pgvector>=0.3",
    "diskcache>=5.6",                 # components/cache 用
    "cryptography>=43",               # utils/crypto_util 用
    "langchain-openai>=0.3",          # components/llms BaseLLM 用
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
