[project]
name = "chameleon-agentkit"
version = "0.1.0"
description = "Chameleon 本地智能体作者 SDK —— @agent / AgentRun / ModelSlot / Opt"
requires-python = ">=3.12"
dependencies = [
    "chameleon-core",
    "chameleon-providers-base",
]

[tool.uv.sources]
chameleon-core = { workspace = true }
chameleon-providers-base = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
