[project]
name = "chameleon-api"
version = "0.1.0"
description = "Chameleon 对外 AI 服务能力包（business-facing API：agent / knowledge / conversation / task）"
requires-python = ">=3.12"
dependencies = [
    "chameleon-core",
    "chameleon-providers-base",
    "fastapi>=0.115",
    "pydantic>=2.7",
]

[tool.uv.sources]
chameleon-core = { workspace = true }
chameleon-providers-base = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
