[project]
name = "chameleon-api"
version = "1.0.0"
description = "Chameleon 对外 AI 服务能力包（business-facing API：agent / knowledge / conversation / task）"
requires-python = ">=3.12"
dependencies = [
    "chameleon-core",
    "chameleon-data",
    "chameleon-integrations",
    "chameleon-providers-base",
    "fastapi>=0.115",
    "pydantic>=2.7",
    # KB Dify-grade parsers (P16-C + Phase E：PPTX / XLSX 扩文档族)
    "pypdf>=4.0",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "selectolax>=0.3",
]

[tool.uv.sources]
chameleon-core = { workspace = true }
chameleon-data = { workspace = true }
chameleon-integrations = { workspace = true }
chameleon-providers-base = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
