[project]
name = "chameleon-app"
version = "0.6.0"
description = "Chameleon FastAPI 启动器（薄，仅装配 chameleon-api + chameleon-system + lifespan + 中间件）"
requires-python = ">=3.12"
dependencies = [
    "chameleon-core",
    "chameleon-providers-base",
    "chameleon-provider-local",
    "chameleon-provider-dify",
    "chameleon-provider-fastgpt",
    # 业务路由两个独立包
    "chameleon-api",
    "chameleon-system",
    # 内置 agent 通过 namespace 自动发现；这里仅显式依赖业务级 agent
    "chameleon-agent-qwen-chat",
    # 示例 agent 也安装到 workspace（namespace 扫到，但不强制 app 依赖）
    "chameleon-agent-example-echo-langgraph",
    "chameleon-agent-example-echo-runnable",
    "chameleon-agent-example-echo-native",
    "fastapi>=0.115",
    "python-multipart>=0.0.9",        # /v1/admin/settings/import-json 用 File / Form
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "click>=8",
]

[tool.uv.sources]
chameleon-core = { workspace = true }
chameleon-providers-base = { workspace = true }
chameleon-provider-local = { workspace = true }
chameleon-provider-dify = { workspace = true }
chameleon-provider-fastgpt = { workspace = true }
chameleon-api = { workspace = true }
chameleon-system = { workspace = true }
chameleon-agent-qwen-chat = { workspace = true }
chameleon-agent-example-echo-langgraph = { workspace = true }
chameleon-agent-example-echo-runnable = { workspace = true }
chameleon-agent-example-echo-native = { workspace = true }

[project.scripts]
chameleon = "chameleon.app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
