[project]
name = "chameleon-core"
version = "0.5.0"
description = "Chameleon 基础设施 + AI infra + 共享 ORM 模型"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "loguru>=0.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6",
    "pgvector>=0.3",
    "diskcache>=5.6",                 # components/cache 用
    "cryptography>=43",               # utils/crypto + JWT 用
    "langchain-openai>=0.3",          # components/llms BaseLLM 用
    "redis>=5.0",                     # infra/redis 用（JWT 黑名单 / 限流 / 缓存）
    "argon2-cffi>=23",                # utils/passwords 用（OWASP 推荐密码哈希）
    "pyjwt[crypto]>=2.8",             # infra/jwt 用（access / refresh token）
    "minio>=7.2",                     # infra/object_store 用（KB 文档原文 / 上传产物）
    "docker>=7.1",                    # sandbox/docker.py 用（P20.1 Code Sandbox runtime）
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
