[project]
name = "chameleon-data"
version = "1.0.0"
description = "Chameleon 持久化 + 平台基础设施层（ORM 模型 / DB / redis / object_store / jwt / utils）"
requires-python = ">=3.12"
dependencies = [
    "chameleon-core",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "loguru>=0.7",
    "pyyaml>=6",
    "python-dotenv>=1.0",
    "cryptography>=43",      # utils/crypto + infra/jwt
    "pyjwt[crypto]>=2.8",    # infra/jwt（access / refresh token）
    "argon2-cffi>=23",       # utils/passwords（OWASP 推荐密码哈希）
    "redis>=5.0",            # infra/redis（JWT 黑名单 / 限流 / 缓存）
    "minio>=7.2",            # infra/object_store（KB 文档原文 / 上传产物）
    "jieba>=0.42",           # utils/tokenizer（中文分词）
]

[tool.uv.sources]
chameleon-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
