[project]
name = "chameleon-integrations"
version = "1.0.0"
description = "Chameleon 集成实现层（厂商 LLM / embedding / 向量库 / reranker / sandbox / 观测后端等具体实现）"
requires-python = ">=3.12"
dependencies = [
    "chameleon-core",
    "chameleon-data",
    "pydantic>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "pgvector>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "httpx>=0.27",
    "diskcache>=5.6",
    "docker>=7.1",
    "pynacl>=1.5",
    "loguru>=0.7",
]

[tool.uv.sources]
chameleon-core = { workspace = true }
chameleon-data = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
