[project]
name = "chameleon-system"
version = "1.0.0"
description = "Chameleon 内部管理接口包（前端管理面板用：api_key / admin / 未来 dashboard）"
requires-python = ">=3.12"
dependencies = [
    "chameleon-core",
    "chameleon-data",
    "chameleon-integrations",
    "chameleon-engine",
    "chameleon-providers-base",
    "fastapi>=0.115",
    "pydantic[email]>=2.7",
    "apscheduler>=3.10,<4",
]

[tool.uv.sources]
chameleon-core = { workspace = true }
chameleon-data = { workspace = true }
chameleon-integrations = { workspace = true }
chameleon-engine = { workspace = true }
chameleon-providers-base = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
