[project]
name = "chameleon-agent-echo"
version = "0.1.0"
description = "Chameleon echo agent —— 回声智能体，用于冒烟与范式样板"
requires-python = ">=3.12"
dependencies = [
    "chameleon-core",
    "chameleon-providers-base",
    "langgraph>=0.2",
]

[tool.uv.sources]
chameleon-core = { workspace = true }
chameleon-providers-base = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
