[project]
name = "chameleon-agent-echo-native"
version = "0.1.0"
description = "Chameleon echo agent —— 纯 Python async generator 范式（不依赖 LangGraph/LangChain）"
requires-python = ">=3.12"
dependencies = [
    "chameleon-core",
    "chameleon-providers-base",
]

[tool.uv.sources]
chameleon-core = { workspace = true }
chameleon-providers-base = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
