[project]
name = "chameleon-agent-echo-runnable"
version = "0.1.0"
description = "Chameleon echo agent —— LangChain Runnable (LCEL) 范式"
requires-python = ">=3.12"
dependencies = [
    "chameleon-core",
    "chameleon-providers-base",
    "langchain-core>=0.3",
]

[tool.uv.sources]
chameleon-core = { workspace = true }
chameleon-providers-base = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
