[project]
name = "chameleon-agent-qwen-chat"
version = "0.1.0"
description = "Chameleon Qwen chat agent —— 通用聊天，直接走 model.json cases.llm"
requires-python = ">=3.12"
dependencies = [
    "chameleon-core",
    "chameleon-providers-base",
    "langchain-core>=0.3",
]

[tool.uv.sources]
chameleon-core = { workspace = true }
chameleon-providers-base = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
