[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chameleon-sdk"
version = "0.1.0"
description = "Python SDK for Chameleon — LLMops platform"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Chameleon Team" }]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/garveyhu/Chameleon"
Documentation = "https://github.com/garveyhu/Chameleon/blob/main/docs/sdk/python.md"

[tool.hatch.build.targets.wheel]
packages = ["chameleon_sdk"]
