[project]
name = "chameleon-agent-qwen-chat"
version = "0.1.0"
description = "Chameleon 通用聊天 agent —— agentkit @agent 范式样板"
requires-python = ">=3.12"
dependencies = [
    "chameleon-agentkit",
]

[tool.uv.sources]
chameleon-agentkit = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
