[project]
name = "chameleon-provider-graph"
version = "0.1.0"
description = "Chameleon graph provider —— 把可视化编排的工作流(graph)作为可对话 agent 跑（in-process 引擎）"
requires-python = ">=3.12"
dependencies = [
    "chameleon-core",
    "chameleon-data",
    "chameleon-engine",
    "chameleon-providers-base",
]

[tool.uv.sources]
chameleon-core = { workspace = true }
chameleon-data = { workspace = true }
chameleon-engine = { workspace = true }
chameleon-providers-base = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
