[project]
name = "chameleon-agent-example-echo-langgraph"
version = "0.1.0"
description = "Chameleon 示例 agent —— LangGraph CompiledGraph 范式样板"
requires-python = ">=3.12"
dependencies = [
    "chameleon-core",
    "chameleon-providers-base",
    "langgraph>=0.2",
]

[tool.uv.sources]
chameleon-core = { workspace = true }
chameleon-providers-base = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
