[project]
name = "chameleon-agent-example-echo"
version = "0.1.0"
description = "示例：最小 @agent —— 纯函数回声，零模型 / KB"
requires-python = ">=3.12"
dependencies = ["chameleon-agentkit"]

[tool.uv.sources]
chameleon-agentkit = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
