[project]
name = "chameleon-agent-example-echo"
version = "0.1.0"
description = "示例：最小 @agent —— 纯函数回声，零模型 / KB"
requires-python = ">=3.12"
dependencies = ["chameleon-agentkit"]

[tool.uv.sources]
chameleon-agentkit = { workspace = true }

# 推荐的注册方式：声明 entry-point，命名空间内外都能被发现
[project.entry-points."chameleon.agents"]
example-echo = "chameleon.agents.example_echo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
