[project]
name = "chameleon-agent-example-rag-qa"
version = "0.1.0"
description = "示例：RAG 问答 —— 检索关联 KB + 模型作答（自动引用）"
requires-python = ">=3.12"
dependencies = ["chameleon-agentkit"]

[tool.uv.sources]
chameleon-agentkit = { workspace = true }

# 推荐的注册方式：声明 entry-point，命名空间内外都能被发现
[project.entry-points."chameleon.agents"]
example-rag-qa = "chameleon.agents.example_rag_qa"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chameleon"]
